playbooks/argocd/apps/plex/ingress.yaml
# playbooks/argocd/apps/plex/ingress.yaml
# Ingress for Plex
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plex.soyspray.vip
      secretName: plex-tls
  rules:
    - host: plex.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
